# chaotic_pendulum_edu

./: Dockerfile  README.md  environment.yml  pendulum_config.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
data/raw/: chaotic_pendulum_simulations.csv
notebooks/: 00_Introduction_to_Chaos.ipynb
src/: __init__.py  chaos_classifier.py  chaos_labeler.py  features.py  simulate.py  utils.py
tests/: __init__.py  conftest.py  test_chaos.py  test_chaos_classifier.py  test_chaos_labeler.py  test_features.py  test_pendulum.py  test_simulate.py  test_utils.py
tests/integration/: __init__.py  test_integration_chaos_classifier.py  test_integration_chaos_labeler.py  test_integration_features.py  test_integration_simulate.py  test_integration_utils.py  test_simulation_workflow.py
